--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>yo ko test</title>
+    <link rel="icon" type="image/png" href="http://i.imgur.com/KXsDMlU.png" sizes="32x32">
+    <title>Arctum</title>
     <!-- build:css -->
+      <link href="css/bootstrap.css" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet">
+      <link href="css/loader.css" rel="stylesheet">
     <!-- endbuild -->
     <!-- build:js -->
       <script src="app/require.config.js"></script>
