--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <link href="css/bootstrap.css" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet">
       <link href="css/loader.css" rel="stylesheet">
+      <link href="css/ionicons.min.css" rel="stylesheet">
     <!-- endbuild -->
     <!-- build:js -->
       <script src="app/require.config.js"></script>
