--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
     <!-- endbuild -->
   </head>
   <body>
-    <app params="route: route, locale: locale"></app>
+    <app params="route: route, currentLanguage: currentLanguage"></app>
   </body>
 </html>
